# messager-gtk

./: README.md  com.quackmail.message.json  meson.build
data/: com.quackmail.message.desktop.in  com.quackmail.message.gschema.xml  com.quackmail.message.metainfo.xml.in  com.quackmail.message.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.c  meson.build  quackmessage-application.c  quackmessage-application.h  quackmessage-window.c  quackmessage-window.h  quackmessage-window.ui  quackmessage.gresource.xml
